# CNN-Optimization

./: README.md
cnnbenchs/: errorchecks.cu  errorchecks.cuh  timer.hpp
cnnbenchs/templatedtensor/: CMakeLists.txt  tensor.hpp
cnnbenchs/templatedtensor/convForward/: cf_baseline.cuh  cf_implementations.cuh  cf_padded.cuh  cf_padded_work.cuh  convolutionForwardBench.cu
cnnbenchs/tensor/: CMakeLists.txt  convolutionBackwardBench.cu  convolutionForwardBench.cu  tensor.cu  tensor.cuh  weightsReductionBench.cu
cnnbenchs/tensor/convBackward/: CMakeLists.txt  cb_baseline.cu  cb_implementations.cuh  cb_norelu.cu  cb_padded.cu  cb_padded_norelu.cu  cb_padded_norelu_keep.cu  cb_padded_norelu_reorder.cu  cb_padded_norelu_reorder_pos.cu  cb_padded_norelu_reorder_save.cu  cb_padded_norelu_reorder_work.cu  cb_padded_norelu_work.cu  cb_padded_norelu_work_save.cu
cnnbenchs/tensor/convForward/: CMakeLists.txt  cf_baseline.cu  cf_implementations.cuh  cf_padded.cu  cf_padded_reorder.cu  cf_padded_reorder_work.cu  cf_padded_work.cu  cf_padded_work_save.cu
cnnbenchs/tensor/weightsReduction/: CMakeLists.txt  Readme.md  baseline.cu  implementations.cuh  w_padded.cu  w_registers.cu  w_shfl.cu  w_shfl_registers.cu  w_shfl_registers_reordered.cu  w_shfl_registers_reordered_padded.cu  w_shfl_registers_reordered_padded_shared.cu  w_shfl_registers_reordered_padded_work.cu  w_shfl_registers_reordered_padded_work_keep.cu  w_shfl_registers_reordered_padded_work_reuseIndex.cu  w_work.cu  w_work_shfl.cu  w_work_shfl_registers.cu
